Added apache shiro based authentication